# twitter-clone

./: README.md
OneDrive/Documentos/leonan/Profisssão Development Full Stack/projeto final/: README.md
OneDrive/Documentos/leonan/Profisssão Development Full Stack/projeto final/twitter-app/: Docker-compose.yml  README.md
OneDrive/Documentos/leonan/Profisssão Development Full Stack/projeto final/twitter-app/backend/: Dockerfile
OneDrive/Documentos/leonan/Profisssão Development Full Stack/projeto final/twitter-app/backend/api/: views.py
OneDrive/Documentos/leonan/Profisssão Development Full Stack/projeto final/twitter-app/backend/posts/: views.py
OneDrive/Documentos/leonan/Profisssão Development Full Stack/projeto final/twitter-app/backend/twitter/: settings.py  urls.py  views.py
OneDrive/Documentos/leonan/Profisssão Development Full Stack/projeto final/twitter-app/backend/user_profile/: admin.py  models.py  serializers.py
OneDrive/Documentos/leonan/Profisssão Development Full Stack/projeto final/twitter-app/backend/users/: serializers.py  views.py
OneDrive/Documentos/leonan/Profisssão Development Full Stack/projeto final/twitter-app/frontend/: Dockerfile
twitter-app/: .env  README.md
twitter-app/backend/: db.sqlite3  pyproject.toml  requirements.txt
twitter-app/backend/api/: urls.py
twitter-app/backend/posts/: models.py  serializers.py
twitter-app/backend/posts/migrations/: 0001_initial.py
twitter-app/backend/twitter/: settings.py  urls.py
twitter-app/backend/user_profile/: views.py
twitter-app/frontend/src/components/: Login.js
(+4 files in other folders)
